Create age-education score 80% completed

--- a/item-based.ipynb
+++ b/item-based.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -21,8 +21,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-21T16:04:54.880250800Z",
-     "start_time": "2023-11-21T16:04:54.862221900Z"
+     "end_time": "2023-11-22T04:21:12.242762500Z",
+     "start_time": "2023-11-22T04:21:11.324949100Z"
     }
    },
    "id": "7d61ab77d332bb9"
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "file = pd.read_excel('shortcourses2566.xlsx')"
@@ -47,8 +47,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-21T16:27:13.324722300Z",
-     "start_time": "2023-11-21T16:27:11.974578100Z"
+     "end_time": "2023-11-22T04:28:35.426192100Z",
+     "start_time": "2023-11-22T04:28:34.192542800Z"
     }
    },
    "id": "dc6b2bbbd8654b6b"
@@ -56,7 +56,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Select column name users to series"
+    "Create Series of users"
    ],
    "metadata": {
     "collapsed": false
@@ -65,13 +65,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
       "text/plain": "0             PORPHAING JANTIP\n1         THANAKORN DARASRISAK\n2             KARNJANA EAMTANG\n3             KARNJANA EAMTANG\n4       THITIMUN VORATHONGCHAI\n                 ...          \n6122         KITTINON SANTASUP\n6123      WITTAWAT SERMSRIPONG\n6124               NON NAKKARA\n6125         PHATTHARAPHON LIN\n6126      THANAPAT SEEMAKAJOHN\nName: Users, Length: 6127, dtype: object"
      },
-     "execution_count": 69,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,8 +84,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-21T15:06:46.957288200Z",
-     "start_time": "2023-11-21T15:06:46.933316900Z"
+     "end_time": "2023-11-22T04:21:14.078924900Z",
+     "start_time": "2023-11-22T04:21:14.068987900Z"
     }
    },
    "id": "8d45c4c54a0d9363"
@@ -93,7 +93,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Determine interest of users by Emails have email = 1 (interest), don't have email = 0 (not interest)"
+    "Create Series of emails"
    ],
    "metadata": {
     "collapsed": false
@@ -102,13 +102,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
       "text/plain": "0            tanghaoren17@gamil.com\n1               tuakung21@gmail.com\n2            karnjana.aon@gmail.com\n3            karnjana.aon@gmail.com\n4          thitimun.rama1@gmail.com\n                   ...             \n6122           kittinon_s@cmu.ac.th\n6123        wittawat_serm@cmu.ac.th\n6124          non_nakkara@cmu.ac.th\n6125    phattharaphon_lin@cmu.ac.th\n6126         thanapat_see@cmu.ac.th\nName: Emails, Length: 6127, dtype: object"
      },
-     "execution_count": 195,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,21 +121,31 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-21T16:47:52.945068200Z",
-     "start_time": "2023-11-21T16:47:52.897214700Z"
+     "end_time": "2023-11-22T04:21:14.110027700Z",
+     "start_time": "2023-11-22T04:21:14.078924900Z"
     }
    },
    "id": "c46f1feb1fec2cc6"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Provide a score to each user based on their email domain"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "107019d623f4cc55"
+  },
+  {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
-      "text/plain": "0       1\n1       1\n2       1\n3       1\n4       1\n       ..\n6122    2\n6123    2\n6124    2\n6125    2\n6126    2\nName: Score_Emails, Length: 6127, dtype: int64"
+      "text/plain": "0       1\n1       1\n2       1\n3       1\n4       1\n       ..\n6122    2\n6123    2\n6124    2\n6125    2\n6126    2\nName: Score Emails, Length: 6127, dtype: int64"
      },
-     "execution_count": 217,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,27 +160,95 @@
     "            email_score.append(1)\n",
     "    else:\n",
     "        email_score.append(0)\n",
-    "email_score = pd.Series(email_score, name='Score_Emails')\n",
+    "email_score = pd.Series(email_score, name='Score Emails')\n",
     "email_score"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-21T17:16:37.915004100Z",
-     "start_time": "2023-11-21T17:16:37.885352600Z"
+     "end_time": "2023-11-22T04:21:33.466203700Z",
+     "start_time": "2023-11-22T04:21:33.447776100Z"
     }
    },
    "id": "b275bd947237ec8c"
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "cell_type": "markdown",
+   "source": [
+    "Create function to calculate age-education score"
+   ],
    "metadata": {
     "collapsed": false
    },
-   "id": "7b40abfde236ed4e"
+   "id": "a11d7e6897a6f859"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "outputs": [],
+   "source": [
+    "def getAgeEducationScore(age, limit_age):\n",
+    "    if age <= limit_age:\n",
+    "        score = 1\n",
+    "    else:\n",
+    "        score = 3\n",
+    "    return score"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-22T05:01:11.998590100Z",
+     "start_time": "2023-11-22T05:01:11.982776400Z"
+    }
+   },
+   "id": "364036364a866598"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Create Series of Age-Education"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "383f28c6a996f51e"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4990\n"
+     ]
+    }
+   ],
+   "source": [
+    "ages = file.loc[:, 'อายุ']\n",
+    "educations = file.loc[:, 'วุฒิการศึกษา']\n",
+    "age_education_scores = []\n",
+    "# check output length of age_education_scores until it has 6127\n",
+    "for i,x in enumerate(educations):\n",
+    "    if x == 'ประถมศึกษา':\n",
+    "        age_education_scores.append(getAgeEducationScore(ages[i], 16))\n",
+    "    if x == 'มัธยมศึกษาตอนต้น':\n",
+    "        age_education_scores.append(getAgeEducationScore(ages[i], 19))\n",
+    "    if x == 'มัธยมศึกษาตอนปลาย':\n",
+    "        age_education_scores.append(getAgeEducationScore(ages[i], 22))\n",
+    "    if x == 'ปริญญาตรี':\n",
+    "        age_education_scores.append(getAgeEducationScore(ages[i], 26))\n",
+    "print(len(age_education_scores))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-22T05:06:34.277905100Z",
+     "start_time": "2023-11-22T05:06:34.270674400Z"
+    }
+   },
+   "id": "45e99acd68c9e77"
   }
  ],
  "metadata": {
