Create status and address scores successfully

--- a/item-based.ipynb
+++ b/item-based.ipynb
@@ -21,8 +21,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-22T04:21:12.242762500Z",
-     "start_time": "2023-11-22T04:21:11.324949100Z"
+     "end_time": "2023-11-22T15:40:59.690195200Z",
+     "start_time": "2023-11-22T15:40:58.293829500Z"
     }
    },
    "id": "7d61ab77d332bb9"
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "file = pd.read_excel('shortcourses2566.xlsx')"
@@ -47,8 +47,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-22T04:28:35.426192100Z",
-     "start_time": "2023-11-22T04:28:34.192542800Z"
+     "end_time": "2023-11-22T15:41:02.312747300Z",
+     "start_time": "2023-11-22T15:40:59.690195200Z"
     }
    },
    "id": "dc6b2bbbd8654b6b"
@@ -84,8 +84,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-22T04:21:14.078924900Z",
-     "start_time": "2023-11-22T04:21:14.068987900Z"
+     "end_time": "2023-11-22T15:41:02.328094100Z",
+     "start_time": "2023-11-22T15:41:02.313822900Z"
     }
    },
    "id": "8d45c4c54a0d9363"
@@ -121,8 +121,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-22T04:21:14.110027700Z",
-     "start_time": "2023-11-22T04:21:14.078924900Z"
+     "end_time": "2023-11-22T15:41:02.473984900Z",
+     "start_time": "2023-11-22T15:41:02.335150600Z"
     }
    },
    "id": "c46f1feb1fec2cc6"
@@ -139,13 +139,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
       "text/plain": "0       1\n1       1\n2       1\n3       1\n4       1\n       ..\n6122    2\n6123    2\n6124    2\n6125    2\n6126    2\nName: Score Emails, Length: 6127, dtype: int64"
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,8 +166,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-22T04:21:33.466203700Z",
-     "start_time": "2023-11-22T04:21:33.447776100Z"
+     "end_time": "2023-11-22T15:41:02.474984900Z",
+     "start_time": "2023-11-22T15:41:02.353101Z"
     }
    },
    "id": "b275bd947237ec8c"
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "def getAgeEducationScore(age, limit_age):\n",
@@ -197,8 +197,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-22T05:01:11.998590100Z",
-     "start_time": "2023-11-22T05:01:11.982776400Z"
+     "end_time": "2023-11-22T15:41:02.474984900Z",
+     "start_time": "2023-11-22T15:41:02.378939800Z"
     }
    },
    "id": "364036364a866598"
@@ -215,13 +215,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4990\n"
+      "5102\n"
      ]
     }
    ],
@@ -235,7 +235,7 @@
     "        age_education_scores.append(getAgeEducationScore(ages[i], 16))\n",
     "    if x == 'มัธยมศึกษาตอนต้น':\n",
     "        age_education_scores.append(getAgeEducationScore(ages[i], 19))\n",
-    "    if x == 'มัธยมศึกษาตอนปลาย':\n",
+    "    if x == 'มัธยมศึกษาตอนปลาย' or x == 'High school':\n",
     "        age_education_scores.append(getAgeEducationScore(ages[i], 22))\n",
     "    if x == 'ปริญญาตรี':\n",
     "        age_education_scores.append(getAgeEducationScore(ages[i], 26))\n",
@@ -244,11 +244,139 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-22T05:06:34.277905100Z",
-     "start_time": "2023-11-22T05:06:34.270674400Z"
+     "end_time": "2023-11-22T15:41:02.475984800Z",
+     "start_time": "2023-11-22T15:41:02.407105500Z"
     }
    },
    "id": "45e99acd68c9e77"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Create Series of status"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "590ed4309726a494"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [],
+   "source": [
+    "status = file.loc[:, 'สถานะ'].fillna(\"\")\n",
+    "status = pd.Series(status ,name='status')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-22T15:48:21.571686800Z",
+     "start_time": "2023-11-22T15:48:21.545261600Z"
+    }
+   },
+   "id": "138e98575332aa8"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Provide a score to each user based on their purchase status"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "25fa97401f1ad07b"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [],
+   "source": [
+    "status_score = []\n",
+    "for x in status:\n",
+    "    if x == 'ชำระเงิน':\n",
+    "        status_score.append(8)\n",
+    "    if x == 'ไม่ผ่านการอนุมัติ':\n",
+    "        status_score.append(7)\n",
+    "    if x == 'ค้างชำระ':\n",
+    "        status_score.append(5)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-22T15:48:44.980204100Z",
+     "start_time": "2023-11-22T15:48:44.969140900Z"
+    }
+   },
+   "id": "c64c742d8df7b574"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Create Series of address"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "7c6c7328e2f4501c"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [],
+   "source": [
+    "address = file.loc[:, 'ที่อยู่'].fillna(\"\")\n",
+    "address = pd.Series(address ,name='status')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-22T15:53:24.608793200Z",
+     "start_time": "2023-11-22T15:53:24.602304800Z"
+    }
+   },
+   "id": "88a0f4cc7126c70a"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Provide a score to each user based on their providing address information or not"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "6d61df31a62dcfd"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[3,\n 4,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 4,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 4,\n 4,\n 3,\n 4,\n 3,\n 4,\n 3,\n 3,\n 3,\n 4,\n 4,\n 3,\n 3,\n 3,\n 3,\n 3,\n 4,\n 4,\n 3,\n 3,\n 4,\n 4,\n 3,\n 4,\n 4,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 4,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 4,\n 3,\n 3,\n 4,\n 3,\n 3,\n 3,\n 4,\n 4,\n 3,\n 3,\n 3,\n 4,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 4,\n 3,\n 3,\n 4,\n 3,\n 4,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 4,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 4,\n 3,\n 3,\n 3,\n 4,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 4,\n 4,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 4,\n 4,\n 4,\n 3,\n 4,\n 3,\n 4,\n 4,\n 4,\n 3,\n 3,\n 3,\n 3,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 3,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 3,\n 4,\n 4,\n 3,\n 4,\n 4,\n 3,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 3,\n 4,\n 4,\n 4,\n 4,\n 4,\n 3,\n 4,\n 3,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 3,\n 4,\n 4,\n 4,\n 4,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 4,\n 4,\n 3,\n 3,\n 4,\n 4,\n 3,\n 4,\n 4,\n 4,\n 4,\n 3,\n 4,\n 3,\n 3,\n 4,\n 4,\n 3,\n 4,\n 3,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 3,\n 3,\n 3,\n 3,\n 4,\n 3,\n 4,\n 4,\n 4,\n 4,\n 3,\n 4,\n 4,\n 4,\n 3,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 3,\n 4,\n 4,\n 3,\n 4,\n 4,\n 3,\n 4,\n 3,\n 3,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 3,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 3,\n 3,\n 3,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 3,\n 4,\n 4,\n 4,\n 4,\n 3,\n 4,\n 4,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 4,\n 3,\n 3,\n 3,\n 4,\n 4,\n 3,\n 4,\n 4,\n 4,\n 4,\n 4,\n 3,\n 3,\n 4,\n 4,\n 3,\n 3,\n 3,\n 3,\n 3,\n 4,\n 3,\n 4,\n 3,\n 3,\n 3,\n 3,\n 4,\n 3,\n 3,\n 3,\n 3,\n 3,\n 4,\n 3,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 3,\n 4,\n 3,\n 4,\n 4,\n 3,\n 4,\n 4,\n 4,\n 3,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 3,\n 3,\n 3,\n 3,\n 3,\n 4,\n 4,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 4,\n 4,\n 3,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 3,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 3,\n 3,\n 4,\n 4,\n 3,\n 4,\n 3,\n 4,\n 3,\n 4,\n 4,\n 4,\n 4,\n 3,\n 3,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 3,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 3,\n 3,\n 3,\n 3,\n 4,\n 3,\n 4,\n 3,\n 4,\n 4,\n 3,\n 4,\n 3,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 4,\n 3,\n 3,\n 3,\n 3,\n 3,\n 4,\n 3,\n 3,\n 4,\n 4,\n 4,\n 3,\n 3,\n 3,\n 4,\n 4,\n 4,\n 3,\n 3,\n 3,\n 3,\n 4,\n 4,\n 3,\n 4,\n 4,\n 4,\n 4,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 4,\n 3,\n 3,\n 3,\n 3,\n 3,\n 4,\n 3,\n 4,\n 4,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 4,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 4,\n 4,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 4,\n 4,\n 4,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 4,\n 4,\n 4,\n 3,\n 3,\n 3,\n 3,\n 4,\n 3,\n 3,\n 4,\n 4,\n 4,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 3,\n 4,\n 4,\n 4,\n 4,\n 3,\n 3,\n 4,\n 4,\n 4,\n 3,\n 4,\n 3,\n 4,\n 4,\n 3,\n 3,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 3,\n 3,\n 3,\n 4,\n 4,\n 3,\n 4,\n 4,\n 3,\n 3,\n 4,\n 4,\n 4,\n 4,\n 3,\n 4,\n 4,\n 4,\n 3,\n 4,\n 4,\n 3,\n 3,\n 4,\n 4,\n 4,\n 4,\n 3,\n 4,\n 4,\n 4,\n 3,\n 4,\n 3,\n 4,\n 4,\n 4,\n 4,\n 3,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 3,\n 4,\n 4,\n 4,\n 4,\n 3,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 3,\n 3,\n 4,\n 4,\n 3,\n 4,\n 4,\n 4,\n 3,\n 4,\n 3,\n 4,\n 3,\n 4,\n 4,\n 3,\n 4,\n 4,\n 4,\n 4,\n 4,\n 3,\n 3,\n 3,\n 3,\n 3,\n 4,\n 4,\n 3,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 3,\n 4,\n 4,\n 4,\n 4,\n 3,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 3,\n 4,\n 4,\n 4,\n 3,\n 3,\n 3,\n 3,\n 3,\n 4,\n 3,\n 4,\n 4,\n 3,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 3,\n 3,\n 4,\n 4,\n 4,\n 4,\n 4,\n 3,\n 4,\n 3,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 3,\n 3,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 3,\n 3,\n 4,\n 3,\n 3,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 3,\n 3,\n 3,\n 3,\n 4,\n 4,\n 3,\n 3,\n 3,\n 3,\n 4,\n 4,\n 4,\n 4,\n 4,\n 3,\n 3,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 3,\n 4,\n 4,\n 4,\n 3,\n 4,\n 4,\n 3,\n 4,\n 4,\n 4,\n 4,\n 4,\n 4,\n 3,\n 3,\n 4,\n 4,\n 3,\n 4,\n 3,\n 4,\n 3,\n ...]"
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "address_score = []\n",
+    "for x in address:\n",
+    "    if x == \"\":\n",
+    "        address_score.append(3)\n",
+    "    else:\n",
+    "        address_score.append(4)\n",
+    "address_score"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-22T15:54:40.691678100Z",
+     "start_time": "2023-11-22T15:54:40.685106Z"
+    }
+   },
+   "id": "3157f57133f58f5d"
   }
  ],
  "metadata": {
