่้email_score successfully

--- a/item-based.ipynb
+++ b/item-based.ipynb
@@ -12,17 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 153,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np  "
+    "import numpy as np\n",
+    "import math"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-22T15:40:59.690195200Z",
-     "start_time": "2023-11-22T15:40:58.293829500Z"
+     "end_time": "2023-11-23T14:23:28.467343500Z",
+     "start_time": "2023-11-23T14:23:28.437142Z"
     }
    },
    "id": "7d61ab77d332bb9"
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 122,
    "outputs": [],
    "source": [
     "file = pd.read_excel('shortcourses2566.xlsx')"
@@ -47,8 +48,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-22T15:41:02.312747300Z",
-     "start_time": "2023-11-22T15:40:59.690195200Z"
+     "end_time": "2023-11-23T13:43:00.313647600Z",
+     "start_time": "2023-11-23T13:42:58.812409100Z"
     }
    },
    "id": "dc6b2bbbd8654b6b"
@@ -65,13 +66,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
       "text/plain": "0             PORPHAING JANTIP\n1         THANAKORN DARASRISAK\n2             KARNJANA EAMTANG\n3             KARNJANA EAMTANG\n4       THITIMUN VORATHONGCHAI\n                 ...          \n6122         KITTINON SANTASUP\n6123      WITTAWAT SERMSRIPONG\n6124               NON NAKKARA\n6125         PHATTHARAPHON LIN\n6126      THANAPAT SEEMAKAJOHN\nName: Users, Length: 6127, dtype: object"
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,8 +85,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-22T15:41:02.328094100Z",
-     "start_time": "2023-11-22T15:41:02.313822900Z"
+     "end_time": "2023-11-23T07:54:45.992193600Z",
+     "start_time": "2023-11-23T07:54:45.828333400Z"
     }
    },
    "id": "8d45c4c54a0d9363"
@@ -184,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "def getAgeEducationScore(age, limit_age):\n",
@@ -197,8 +198,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-22T15:41:02.474984900Z",
-     "start_time": "2023-11-22T15:41:02.378939800Z"
+     "end_time": "2023-11-23T07:55:02.781094Z",
+     "start_time": "2023-11-23T07:55:02.747499900Z"
     }
    },
    "id": "364036364a866598"
@@ -215,13 +216,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 162,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5102\n"
+      "6127\n"
      ]
     }
    ],
@@ -231,21 +232,37 @@
     "age_education_scores = []\n",
     "# check output length of age_education_scores until it has 6127\n",
     "for i,x in enumerate(educations):\n",
-    "    if x == 'ประถมศึกษา':\n",
+    "    if  x == 'อื่นๆ (-)' or pd.isna(x) :\n",
+    "        age_education_scores.append(getAgeEducationScore(ages[i], 0))\n",
+    "    elif x == 'ประถมศึกษา' or x == 'อื่นๆ (ป.4)' or x == 'อื่นๆ (ป.7)' or x == 'อื่นๆ (ป7)':\n",
     "        age_education_scores.append(getAgeEducationScore(ages[i], 16))\n",
-    "    if x == 'มัธยมศึกษาตอนต้น':\n",
+    "    elif x == 'มัธยมศึกษาตอนต้น' or x == 'Secondary school' or x == 'อื่นๆ (มศ.3)':\n",
     "        age_education_scores.append(getAgeEducationScore(ages[i], 19))\n",
-    "    if x == 'มัธยมศึกษาตอนปลาย' or x == 'High school':\n",
+    "    elif x == 'มัธยมศึกษาตอนปลาย' or x == 'High school' or x == 'Vocational' or x == 'การศึกษานอกระบบ' \\\n",
+    "            or x == 'ประกาศนียบัตรวิชาชีพ (ปวช.)' or x == 'อื่นๆ (ม.ปลาย จบหลักสูตรEMR เป็นจนท.ปฏิบัติการ)'\\\n",
+    "            or x == 'อื่นๆ (กำลังศึกษาชั้นมัธยมศึกษาตอนปลาย)' or x == 'อื่นๆ (กำลังศึกษาชั้นมัธยมศึกษาปีที่6)' \\\n",
+    "            or x == 'อื่นๆ (มศ.5)' :\n",
     "        age_education_scores.append(getAgeEducationScore(ages[i], 22))\n",
-    "    if x == 'ปริญญาตรี':\n",
+    "    elif x == 'ปริญญาตรี' or x == 'Bachelor degree' or x == 'Diploma' or x == 'High Vocational' \\\n",
+    "            or x == 'ประกาศนียบัตรวิชาชีพชั้นสูง (ปวส.)' or x == 'อื่นๆ (กำลังศึกษาในระดับปริญญาตรี)' \\\n",
+    "            or x == 'อื่นๆ (กำลังศึกษาปริญญาตรี สาขารังสีเทคนิค)' or x == 'อื่นๆ (ปริญญาแพทยศาสตร์บัณฑิต)' \\\n",
+    "            or x == 'อื่นๆ (นักศึกษาแพทย์ปี 5)' or x == 'อื่นๆ (นักศึกษาแพทย์ มช ปี4 ศูนย์เชียงราย)' \\\n",
+    "            or x == 'อื่นๆ (แพทยศาสตร์บัณฑิต)' or x == 'อื่นๆ (แพทย์)'  or x == 'อื่นๆ (ประกาศณียบัตรผู้ช่วยพยาบาล)' \\\n",
+    "            or x == 'อนุปริญญา' or x == 'อื่นๆ (ป.ตรี)' or x == 'อื่นๆ (ผู้ช่วยพยาบาล)':\n",
     "        age_education_scores.append(getAgeEducationScore(ages[i], 26))\n",
-    "print(len(age_education_scores))"
+    "    elif x == 'ปริญญาโท' or x == 'ปริญญาเอก' or x == \"Master's degree\" or x == 'Other (OBGYN specalist lavel 1)' \\\n",
+    "            or x == 'Other (Residency)' or x == 'Ph.D.' or x == 'อื่นๆ (Internal Medicine)' \\\n",
+    "            or x == 'อื่นๆ (เฉพาะทาง)' or x == ('อื่นๆ (วุฒิบัตร)') or x == 'อื่นๆ (วว.ออร์โธปิดิกส์)' \\\n",
+    "            or x == 'อื่นๆ (วุฒิบัตรแสดงความรู้ความชำนาญในการประกอบวิชาชีพเภสัชกรรม สาขาเภสัชบำบัด)'\\\n",
+    "            or x == 'อื่นๆ (วุฒิบัตรผู้เชี่ยวชาญสาขาทันตกรรมทั่วไป)' or x == 'อื่นๆ (วุฒิบัตรศัลยศาสตร์และแม็กซิลโลเฟเชียล)':\n",
+    "        age_education_scores.append(getAgeEducationScore(ages[i], 40))\n",
+    "print(len(age_education_scores))\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-22T15:41:02.475984800Z",
-     "start_time": "2023-11-22T15:41:02.407105500Z"
+     "end_time": "2023-11-23T14:36:20.635709900Z",
+     "start_time": "2023-11-23T14:36:20.594147100Z"
     }
    },
    "id": "45e99acd68c9e77"
@@ -262,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 97,
    "outputs": [],
    "source": [
     "status = file.loc[:, 'สถานะ'].fillna(\"\")\n",
@@ -271,8 +288,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-22T15:48:21.571686800Z",
-     "start_time": "2023-11-22T15:48:21.545261600Z"
+     "end_time": "2023-11-23T13:31:44.404323600Z",
+     "start_time": "2023-11-23T13:31:44.400598800Z"
     }
    },
    "id": "138e98575332aa8"
@@ -289,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 49,
    "outputs": [],
    "source": [
     "status_score = []\n",
@@ -304,8 +321,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-22T15:48:44.980204100Z",
-     "start_time": "2023-11-22T15:48:44.969140900Z"
+     "end_time": "2023-11-23T12:56:54.646723300Z",
+     "start_time": "2023-11-23T12:56:54.630898200Z"
     }
    },
    "id": "c64c742d8df7b574"
